# cepheus_ws

./: .gitignore  1  \  calibrate_imu.sh  cmd.sh  commands  compile_card.sh  export.sh  export_data.py  filtered_pos.txt  filtered_vel.txt  frames.gv  ignition.sh  launch_builder.py  new_x.txt  new_y.txt  noise.txt  path.txt  plot.py  run.sh  start_movement.sh  start_robot.sh  trap.sh  unfiltered_pos.txt  unfiltered_vel.txt  vel.txt  workspace.py
src/botasys_force_torque_sensor/: CMakeLists.txt  LICENSE  package.xml
src/botasys_force_torque_sensor/config/: RokubiCalibration.txt  offset.yaml  settings.rviz
src/botasys_force_torque_sensor/include/botasys_force_torque_sensor/: serial_comms.h
src/botasys_force_torque_sensor/launch/: calibration.launch  driver.launch
src/botasys_force_torque_sensor/src/: botasys_force_torque_sensor_calibration_node.cpp  botasys_force_torque_sensor_node.cpp  low_pass_filter.cpp  serial_comms.cpp
src/cepheus_robot/: CMakeLists.txt  DM35820_driver_load.sh  README.md  init_script.sh  package.xml  urdf.rviz
src/cepheus_robot/DM7820_Linux_v03.00.00/: CHANGES.TXT  LICENSE.TXT  README.TXT
src/cepheus_robot/DM7820_Linux_v03.00.00/driver/: .cache.mk  .rtd-dm7820.ko.cmd  .rtd-dm7820.mod.o.cmd  .rtd-dm7820.o.cmd  Makefile  modules.order  rtd-dm7820.c  rtd-dm7820.ko  rtd-dm7820.mod.c  rtd-dm7820.o.ur-safe
src/cepheus_robot/DM7820_Linux_v03.00.00/examples/: Makefile  advint_event_interrupt.c  advint_match_interrupt.c  advint_status.c  advint_strobe_interrupt.c  basic_test.c  brdctl_device_info.c  dma_capture_buffers.c  dma_capture_file.c  fifo_cascaded.c  fifo_interrupt.c  fifo_pci_access.c  incenc_encoders.c  incenc_interrupt.c  incenc_status  incenc_status.c  library_test.c  loopback.c  prgclk_clocks.c  pwm_interrupt.c  pwm_measure.c  pwm_modulators.c  stdio_digital_io.c  stdio_digital_io.c~  stdio_peripheral_output.c  stdio_strobe_signal.c  tmrctr_interrupt.c  tmrctr_status.c  tmrctr_timers.c
src/cepheus_robot/DM7820_Linux_v03.00.00/include/: dm7820_library.h  dm7820_registers.h  dm7820_types.h  dm7820_version.h
src/cepheus_robot/DM7820_Linux_v03.00.00/lib/: Makefile  librtd-dm7820.c
src/cepheus_robot/action/: LeftCatchObject.action  RightCatchObject.action
src/cepheus_robot/config/: controllers.yaml  controllers.yaml~  imu_offsets.yaml
src/cepheus_robot/docs/: README.md
src/cepheus_robot/include/: dm7820_driver.h  dm7820_globals.h  dm7820_ioctl.h
src/cepheus_robot/launch/: .hardware.launch.swp  .launch_cepheus_robot.launch.swn  .launch_cepheus_robot.launch.swo  .launch_cepheus_robot.launch.swp  calibrate_imu.launch  display.launch  display.launch~  gazebo.launch  gazebo.launch~  hardware.launch  hardware.launch.save  hardware.launch~  launch_cepheus_robot.launch  launch_cepheus_robot.launch~  launch_cepheus_with_bota.launch  spawner.launch  start_movement.launch  start_movement_obsidian.launch  start_movement_obsidian_bp1b.launch  start_movement_obsidian_bp2.launch  start_movement_obsidian_sc1.launch  start_movement_obsidian_sc2.launch  start_movement_obsidian_sc2_validation.launch  test_imu.launch
src/cepheus_robot/model/: assist_robot.urdf  cepheus-default.urdf  cepheus.urdf  cepheus.urdf~
src/cepheus_robot/src/: .base_controller.cpp.swp  .base_planner.cpp.swp  .cepheus_arms_operations.cpp.swp  .cepheus_hardware.cpp.swn  .cepheus_hardware.cpp.swo  .cepheus_hardware.cpp.swp  .cepheus_interface.cpp.swj  .cepheus_interface.cpp.swk  .cepheus_interface.cpp.swl  .cepheus_interface.cpp.swm  .cepheus_interface.cpp.swn  .cepheus_interface.cpp.swo  .cepheus_interface.cpp.swp  .new_base_planner.cpp.swg  .new_base_planner.cpp.swh  .new_base_planner.cpp.swi  .new_base_planner.cpp.swj  .new_base_planner.cpp.swk  .new_base_planner.cpp.swl  .new_base_planner.cpp.swm  .new_base_planner.cpp.swn  .new_base_planner.cpp.swo  .new_base_planner.cpp.swp  DM35820.h  EROSSGripper_v3.cpp  alex_gripper_control.cpp  base_controller.cpp  base_planner.cpp  calibrate_imu.cpp  cepheus_arms_operations.cpp  cepheus_ctrl.cpp  cepheus_ctrl.h  cepheus_hardware.cpp  cepheus_hardware.cpp~  cepheus_hardware.h  cepheus_init_ctrls.cpp  cepheus_interface.cpp  ctrl_backup.cpp  digital_filter.h  eross_control.cpp  (+12 more)
src/cepheus_robot/src/csvs/: identification.csv  validation.csv
src/cepheus_robot/src/eross/: eross_control.cpp  eross_control_relative.cpp
src/cepheus_robot/src/legacy/: bota_FTS.cpp  camera_odom.cpp  gripper_target_broadcaster.cpp  mouse_odom_2.cpp
src/cepheus_robot/src/obsidian/: obsidian_bp1a.cpp  obsidian_bp1b.cpp  obsidian_bp2.cpp  obsidian_sc1.cpp  obsidian_sc2.cpp  obsidian_sc2_validation.cpp  thruster_exp.cpp
src/marker/: CMakeLists.txt  package.xml
src/marker/calib/: camera_virtual.yml  xs_1280_720_noAF.yml
src/marker/include/aruco/: chromaticmask.h
src/marker/launch/: ar_sys_board.launch  assist_board.launch  assist_board_scaled.launch  assist_board_scaled_corr.launch
src/marker/markers/: assist_board_meters.txt  assist_board_meters_scaled.txt  assist_board_meters_scaled_corr.txt  assist_board_mm.txt  assist_dictionary.yml
src/marker/src/: assist_board.cpp  marker_pose_estimator.cpp  marker_pose_estimator.h
src/marker/src/aruco/: chromaticmask.cpp
src/phase_space/: CMakeLists.txt  README.md  package.xml
src/phase_space/config/: alxgripper.yaml  assist_robot.yaml  bracelet.yaml  calibrator.yaml  cepheus.yaml  cepheus_robot.yaml  cylinder.yaml  hand.yaml  space_robot_5led.yaml  star.yaml  thimble.yaml
src/phase_space/config/gripper_horizontal/: gripper.yaml
src/phase_space/include/: PoseTrackingFilter.h  owltk.h
src/phase_space/launch/: phase_space.launch  rviz.rviz  track_alxgripper.launch  track_assist_robot.launch  track_cepheus_robot.launch  track_gripper.launch  track_object.launch  track_two_objects.launch  track_two_objects_alex.launch
src/phase_space/model/: granite.urdf
src/phase_space/msg/: PhaseSpaceMarker.msg  PhaseSpaceMarkerArray.msg
src/phase_space/src/: PoseTrackingFilter.cpp  phase_space_node.cpp  phase_space_rviz_publisher.cpp  track_body_node.cpp
src/phase_space/urdf/: object.urdf.xacro
(+53 files in other folders)
